[package]
name = "lidar_vis_webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "*", features = ["tracing"] }
futures = "0.3.29"
futures-core = "0.3.29"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
